--- a/BleedingSapphire/BleedingSapphire.csproj
+++ b/BleedingSapphire/BleedingSapphire.csproj
@@ -10,6 +10,7 @@
     <AssemblyName>BleedingSapphire</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <MonoGamePlatform>Windows</MonoGamePlatform>
+    <ApplicationManifest>Helper.cs.manifest</ApplicationManifest>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
@@ -40,12 +41,28 @@
     <Compile Include="Game1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Component\SimulationComponent.cs" />
+    <Compile Include="Component\SceneComponent.cs" />
+    <Compile Include="Component\InputComponent.cs" />
+    <Compile Include="Models\Item.cs" />
+    <Compile Include="Models\World.cs" />
+    <Compile Include="Models\Area.cs" />
+    <Compile Include="Models\Player.cs" />
+    <Compile Include="Models\Helper.cs" />
+    <Compile Include="Models\Diamand.cs" />
+    <Compile Include="Models\Handler.cs" />
+    <Compile Include="Models\IAttackable.cs" />
+    <Compile Include="Models\Itradeable.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Icon.png" />
   </ItemGroup>
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Component\" />
+    <Folder Include="Models\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
