--- a/BleedingSapphire/BleedingSapphire.csproj
+++ b/BleedingSapphire/BleedingSapphire.csproj
@@ -33,7 +33,7 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="MonoGame.Framework">
-      <HintPath>$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\Windows\MonoGame.Framework.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Library\Frameworks\MonoGame.framework\v3.7.0.1070\Assemblies\DesktopGL\MonoGame.Framework.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -51,11 +51,24 @@
     <Compile Include="Models\Diamand.cs" />
     <Compile Include="Models\Handler.cs" />
     <Compile Include="Models\IAttackable.cs" />
-    <Compile Include="Models\ITradeable.cs" />
+    <Compile Include="Models\IInteractable.cs" />
     <Compile Include="Models\Tile.cs" />
+    <Compile Include="Models\Character.cs" />
+    <Compile Include="Models\Orc.cs" />
+    <Compile Include="Models\Layer.cs" />
+    <Compile Include="Models\ICollidable.cs" />
+    <Compile Include="Models\IAttacker.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Icon.png" />
+    <None Include="x64\SDL2.dll" />
+    <None Include="x64\libSDL2-2.0.so.0" />
+    <None Include="x64\libopenal.so.1" />
+    <None Include="x64\soft_oal.dll" />
+    <None Include="x86\SDL2.dll" />
+    <None Include="x86\libSDL2-2.0.so.0" />
+    <None Include="x86\libopenal.so.1" />
+    <None Include="x86\soft_oal.dll" />
   </ItemGroup>
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
